--- a/app/src/main/res/layout/decimal_to_hex_signed.xml
+++ b/app/src/main/res/layout/decimal_to_hex_signed.xml
@@ -2,44 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.codeflavor.project1.DecimalToHexSigned"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp"
-    tools:context="com.codeflavor.project1.HexToDecimalUnsignedActivity">
+    android:padding="20dp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Decimal To Hex Unsigned"
+        android:text="Decimal To Hex Signed"
         android:textSize="30sp"
         android:textAlignment="center"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Question Section"
-        android:id="@+id/uQuestion"
+        android:id="@+id/sQuestion"
         android:textSize="20sp"/>
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/uRadioGroup">
+        android:id="@+id/sRadioGroup">
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/uSmall"
-            android:checked="true"
-            android:text="Value is too small"/>
+            android:id="@+id/sSmall"
+            android:text="Value is too small"
+            android:checked="true"/>
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/uLarge"
+            android:id="@+id/sLarge"
             android:text="Value is too large"/>
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Value is: "
-            android:id="@+id/uValue"/>
+            android:id="@+id/sValue"/>
     </RadioGroup>
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,31 +48,32 @@
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/uOne"></Spinner>
+            android:id="@+id/sOne"></Spinner>
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/uTwo"></Spinner>
+            android:id="@+id/sTwo"></Spinner>
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/uThree"></Spinner>
+            android:id="@+id/sThree"></Spinner>
     </LinearLayout>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Check My Answer"
-        android:id="@+id/uCheck"
-        android:onClick="uCheckMyAnswer"/>
+        android:id="@+id/sCheck"
+        android:onClick="sCheckMyAnswer"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Answer: "
         android:visibility="invisible"
-        android:id="@+id/uAnswer"/>
+        android:id="@+id/sAnswer"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Score: 0/0"
-        android:id="@+id/uScore"/>
+        android:id="@+id/sScore"/>
+
 </LinearLayout>
